--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "redux": "^4.2.0",
         "redux-observable": "^2.0.0",
         "rxjs": "^7.5.7",
-        "typescript": "^4.9.3",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
@@ -61,7 +60,15 @@
         "@commitlint/config-conventional": "^17.6.6",
         "@playwright/test": "^1.28.0",
         "@types/react-helmet": "^6.1.5",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "eslint": "^8.45.0",
+        "eslint-config-standard-with-typescript": "^36.1.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^16.0.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.2",
         "husky": "^8.0.3",
-        "jest-html-reporter": "^3.7.0"
+        "jest-html-reporter": "^3.7.0",
+        "typescript": "^5.1.6"
     }
 }
