fix: changed verify pr commitlint step

--- a/.github/workflows/verify-pull-request.yml
+++ b/.github/workflows/verify-pull-request.yml
@@ -60,6 +60,6 @@ jobs:
       - name: Install packages
         run: npm ci
       - name: Run commit check
-        run: npx commitlint -f HEAD~1 --verbose
+        run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
 
 
