--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,13 @@ jobs:
         name: Conventional Changelog Action
         id: changelog
         with:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           skip-git-pull: "true"
           output-file: "false"
       - uses: JasonEtco/create-an-issue@v2.9.1
         name: Create an issue
         env:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           changelog: ${{ steps.changelog.outputs.clean_changelog }}
           tag: ${{ steps.changelog.outputs.tag }}
           author: ${{ github.event.release.author.login }}
@@ -112,17 +112,4 @@ jobs:
         with:
           name: static-site
           path: build/
-  release:
-    needs: [build]
-    name: Create release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: static-site
-          path: ./build/
-      - uses: TriPSs/conventional-changelog-action@v3
-        with:
-          github-token: "{{ github.token }}"
-          skip-git-pull: true
+
