--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     tags:
       - 'v\d+'
 jobs:
-  create-registy:
+  create-registry:
     name: Create registry
     runs-on: ubuntu-latest
     steps:
@@ -21,19 +21,18 @@ jobs:
           output-file: "false"
       - uses: JasonEtco/create-an-issue@v2.9.1
         name: Create an issue
+        id: issue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           changelog: ${{ steps.changelog.outputs.clean_changelog }}
-          tag: ${{ steps.changelog.outputs.tag }}
-          release_date: ${{ github.event.repository.updated_at }}
-          release_version: ${{ steps.changelog.outputs.version }}
+          tag: ${{ github.ref_name }}
         with:
           assignees: "${{ github.event.release.author.login }}"
           update_existing: true
           search_existing: all
           filename: .github/templates/issue.md
-
   unit-tests:
+    needs: [create-registry]
     name: Run unit tests
     runs-on: ubuntu-latest
     steps:
@@ -54,7 +53,11 @@ jobs:
         with:
           name: unit-tests
           path: './test-report.html'
+      - uses: peter-evans/create-or-update-comment@v3.0.2
+        name: Create or Update Comment
+
   e2e-tests:
+    needs: [create-registry]
     name: e2e tests
     runs-on: ubuntu-latest
     steps:
@@ -78,6 +81,7 @@ jobs:
           name: e2e-tests
           path: playwright-report/
   commit-lint:
+    needs: [create-registry]
     name: Lint last commit message
     runs-on: ubuntu-latest
     steps:
@@ -115,4 +119,18 @@ jobs:
         with:
           name: static-site
           path: build/
-
+  deploy:
+    needs: [build]
+    name: Deploy on
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        name: Download build
+        with:
+          name: static-site
+          path: page/
+      - uses: peaceiris/actions-gh-pages@v3
+        name: Deploy on github pages
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./page
