--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,10 @@ jobs:
         run: npm ci
       - name: Execute unit tests
         id: unit-tests
-        run: echo "random-id=$(npm run test-ci)" >> $GITHUB_OUTPUT
+        run: |
+          echo "text<<EOF" >> $GITHUB_OUTPUT
+          echo $(npm run test-ci) >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
         shell: bash
       - name: Save tests result
         id: unit-report
