--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,9 @@ jobs:
       - name: Execute unit tests
         id: unit-tests
         run: |
+          TEXT=${npm rum test}
           echo "text<<EOF" >> $GITHUB_OUTPUT
-          echo $(npm run test-ci) >> $GITHUB_OUTPUT
+          echo $TEXT >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
         shell: bash
       - name: Save tests result
@@ -90,7 +91,7 @@ jobs:
           issue-number: ${{ needs.create-registry.outputs.issueid }}
           body: |
             ## Unit tests are not passed
-            ${{ join(steps.unit-tests.outputs.*, '\n') }}
+            ${{ steps.unit-tests.outputs.text }}
           reactions: eyes
   e2e-tests:
     needs: [create-registry]
