--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           TEXT="$(cat unit.txt | tail -n +5)"
           echo "TEXT<<EOF" >> $GITHUB_ENV
-          echo $TEXT >> $GITHUB_ENV
+          echo "$TEXT" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
       - name: Save tests result
         id: unit-report
