--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "unit-demo-cra",
+    "name": "unit-demo-cra-harizon",
     "version": "0.1.0",
     "homepage": ".",
     "private": true,
